On Google Sign In, authenticate with the app server
Send Google ID Token to the app server to verify. If the token is valid,
extract user profile contents from the payload and issue a JWT to be
used with the REST API.
